--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <a href="https://twitter.com/dogusotomotiv" target="_blank" aria-label="Twitter" class="sosyal-ikon twitter">
         <i class="fab fa-twitter"></i>
       </a>
-      <a href="" target="_blank" aria-label="LinkedIn" class="sosyal-ikon linkedin">
+      <a href="https://www.linkedin.com/company/dogus-otomotiv/?originalSubdomain=tr" target="_blank" aria-label="LinkedIn" class="sosyal-ikon linkedin">
         <i class="fab fa-linkedin-in"></i>
       </a>
     </nav>
