--- a/kariyer.html
+++ b/kariyer.html
@@ -85,10 +85,10 @@
     </article>
   </section>
 
-  <section id="basvuru-formu" style="margin-top: 40px;">
+  <section id="basvuru-formu">
     <h2>Başvuru Formu</h2>
     <p>İlgilendiğiniz pozisyon için aşağıdaki formu doldurarak bize ulaşabilirsiniz.</p>
-    <form action="#" method="post" style="max-width: 600px;">
+    <form action="#" method="post">
       <label for="isim">Adınız Soyadınız:</label><br/>
       <input type="text" id="isim" name="isim" required /><br/><br/>
 
